--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/valenthyne-ut/ip-mailer#readme",
   "dependencies": {
+    "@types/node": "^20.10.4",
     "@types/nodemailer": "^6.4.14",
     "dotenv": "^16.3.1",
     "nodemailer": "^6.9.7",
